@@ -9,12 +9,12 @@ import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map.Entry;
 
 import javax.swing.JOptionPane;
-
-import java.util.List;
 
 import com.cbozan.entity.Employer;
 import com.cbozan.entity.Employer.EmployerBuilder;
@@ -52,15 +52,11 @@ public class EmployerDAO {
 		
 		cache.clear();
 		
-		Connection conn;
-		Statement st;
-		ResultSet rs;
 		String query = "SELECT * FROM employer;";
 		
-		try {
-			conn = DB.getConnection();
-			st = conn.createStatement();
-			rs = st.executeQuery(query);
+		try (Connection conn = DB.getFreshConnection();
+			 Statement st = conn.createStatement();
+			 ResultSet rs = st.executeQuery(query)) {
 			
 			EmployerBuilder builder;
 			Employer employer;
@@ -71,20 +67,20 @@ public class EmployerDAO {
 				builder.setId(rs.getInt("id"));
 				builder.setFname(rs.getString("fname"));
 				builder.setLname(rs.getString("lname"));
-                
-				// tel: PostgreSQL uses VARCHAR[] while H2 uses comma-separated VARCHAR
-				if (DB.isUsingH2()) {
-					String telStr = rs.getString("tel");
-					if (telStr == null || telStr.isBlank()) 
-						builder.setTel(null);
-					else 
-						builder.setTel(Arrays.asList(telStr.split("\\s*,\\s*")));
-				} else {
-					Array telArr = rs.getArray("tel");
-					if (telArr == null)
-						builder.setTel(null);
-					else
-						builder.setTel(Arrays.asList((String[]) telArr.getArray()));
+				
+				String telStr = rs.getString("tel");
+				if(telStr == null || telStr.trim().isEmpty())
+					builder.setTel(null);
+				else {
+					String[] telArray = telStr.split(",");
+					List<String> telList = new ArrayList<>();
+					for(String tel : telArray) {
+						tel = tel.trim();
+						if(!tel.isEmpty()) {
+							telList.add(tel);
+						}
+					}
+					builder.setTel(telList);
 				}
 				
 				builder.setDescription(rs.getString("description"));
@@ -116,28 +112,20 @@ public class EmployerDAO {
 		if(createControl(employer) == false)
 			return false;
 		
-		Connection conn;
-		PreparedStatement pst;
 		int result = 0;
 		String query = "INSERT INTO employer (fname,lname,tel,description) VALUES (?,?,?,?);";
 		String query2 = "SELECT * FROM employer ORDER BY id DESC LIMIT 1;";
 		
-		try {
-			conn = DB.getConnection();
-			pst = conn.prepareStatement(query);
+		try (Connection conn = DB.getFreshConnection();
+			 PreparedStatement pst = conn.prepareStatement(query)) {
 			pst.setString(1, employer.getFname());
 			pst.setString(2, employer.getLname());
 			
-			if (DBConfig.DB_TYPE.equals("H2")) {
-				if (employer.getTel() == null) pst.setString(3, null);
-				else pst.setString(3, String.join(";", employer.getTel()));
-			} else {
-				if(employer.getTel() == null)
-					pst.setArray(3, null);
-				else {
-					java.sql.Array phones = conn.createArrayOf("VARCHAR", employer.getTel().toArray(new String[0]));
-					pst.setArray(3, phones);
-				}
+			if(employer.getTel() == null)
+				pst.setString(3, null);
+			else {
+				String telStr = String.join(",", employer.getTel());
+				pst.setString(3, telStr);
 			}
 			
 			pst.setString(4, employer.getDescription());
@@ -146,41 +134,43 @@ public class EmployerDAO {
 			// adding cache
 			if(result != 0) {
 				
-				ResultSet rs = conn.createStatement().executeQuery(query2);
-				while(rs.next()) {
+				try (PreparedStatement selectPst = conn.prepareStatement(query2);
+					 ResultSet rs = selectPst.executeQuery()) {
+					while(rs.next()) {
 					
 					EmployerBuilder builder = new EmployerBuilder();
 					builder.setId(rs.getInt("id"));
 					builder.setFname(rs.getString("fname"));
 					builder.setLname(rs.getString("lname"));
 					
-					// tel: PostgreSQL uses VARCHAR[] while H2 uses comma-separated VARCHAR
-					if (DB.isUsingH2()) {
-						String telStr = rs.getString("tel");
-						if (telStr == null || telStr.isBlank()) 
-							builder.setTel(null);
-						else 
-							builder.setTel(Arrays.asList(telStr.split("\\s*,\\s*")));
-					} else {
-						Array telArr = rs.getArray("tel");
-						if (telArr == null)
-							builder.setTel(null);
-						else
-							builder.setTel(Arrays.asList((String[]) telArr.getArray()));
+					String telStr = rs.getString("tel");
+					if(telStr == null || telStr.trim().isEmpty())
+						builder.setTel(null);
+					else {
+						String[] telArray = telStr.split(",");
+						List<String> telList = new ArrayList<>();
+						for(String tel : telArray) {
+							tel = tel.trim();
+							if(!tel.isEmpty()) {
+								telList.add(tel);
+							}
+						}
+						builder.setTel(telList);
 					}
 					
 					builder.setDescription(rs.getString("description"));
 					builder.setDate(rs.getTimestamp("date"));
 					
-					try {
+						try {
+							
+							Employer emp = builder.build();
+							cache.put(emp.getId(), emp);
+							
+						} catch (EntityException e) {
+							showEntityException(e, rs.getString("fname") + " " + rs.getString("lname"));
+						}
 						
-						Employer emp = builder.build();
-						cache.put(emp.getId(), emp);
-						
-					} catch (EntityException e) {
-						showEntityException(e, rs.getString("fname") + " " + rs.getString("lname"));
 					}
-					
 				}
 				
 			}
@@ -212,24 +202,20 @@ public class EmployerDAO {
 		if(updateControl(employer) == false)
 			return false;
 		
-		Connection conn;
-		PreparedStatement pst;
 		int result = 0;
 		String query = "UPDATE employer SET fname=?,"
 				+ "lname=?, tel=?, description=? WHERE id=?;";
 		
-		try {
-			conn = DB.getConnection();
-			pst = conn.prepareStatement(query);
+		try (Connection conn = DB.getFreshConnection();
+			 PreparedStatement pst = conn.prepareStatement(query)) {
 			pst.setString(1, employer.getFname());
 			pst.setString(2, employer.getLname());
 			
-			if (DBConfig.DB_TYPE.equals("H2")) {
-				if (employer.getTel() == null) pst.setString(3, null);
-				else pst.setString(3, String.join(";", employer.getTel()));
-			} else {
-				Array phones = conn.createArrayOf("VARCHAR", employer.getTel().toArray(new String[0]));
-				pst.setArray(3, phones);
+			if(employer.getTel() == null)
+				pst.setString(3, null);
+			else {
+				String telStr = String.join(",", employer.getTel());
+				pst.setString(3, telStr);
 			}
 			
 			pst.setString(4, employer.getDescription());
@@ -295,6 +281,14 @@ public class EmployerDAO {
 	
 	public void setUsingCache(boolean usingCache) {
 		this.usingCache = usingCache;
+	}
+	
+	// Method to force refresh cache from database
+	public void refreshCache() {
+		cache.clear();
+		usingCache = false;
+		list(); // This will reload from database
+		usingCache = true;
 	}
 	
 	private static class EmployerDAOHelper{
